# coding_platform_cpp_cm

./: CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml  cmake_build.yml
src/: AddStrings.h  Addtring.cpp  main.cpp
template_cpp_cmake/: CMakeLists.txt  template_cpp_cmake.cpp  template_cpp_cmake.h
tests/: AddString_test.cpp  main_test.cpp
unit_tests/: unit_tests.cpp  unit_tests.vcxproj
