# CMakeList.txt : CMake project for template_cpp_cmake, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (template_cpp_cmake "template_cpp_cmake.cpp" "template_cpp_cmake.h")

# TODO: Add tests and install targets if needed.
